#
# Copyright 2003-2019 the Pacemaker project contributors
#
# The version control history for this file may have further details.
#
# This source code is licensed under the GNU General Public License version 2
# or later (GPLv2+) WITHOUT ANY WARRANTY.
#

MAINTAINERCLEANFILES    = Makefile.in config.h.in

noinst_HEADERS	        = config.h 			\
			  crm_internal.h		\
			  doxygen.h			\
			  pacemaker.h \
			  pacemaker-internal.h		\
			  portability.h
pkginclude_HEADERS	= crm_config.h

SUBDIRS                 =  crm pcmki
